metadata/objects/Sample_Event_Data_Store__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Sample Event Data Store</relationshipLabel>
        <relationshipName>Sample_Event_Data_Store</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Humidity__c</fullName>
        <label>Humidity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Sample Event Data Store</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Sample Event Data Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Event Data Store</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>